- Changes to cifs/smb allow trusted domains.
- Cosmetic changes webgui.
- Cosmetic changes file manager and integration..
- Upgrade GUI translations.
- Upgrade fuppes to 0.692.
- Updates installation menu.
- Upgrade quixplorer to 2.3.2.
- Upgrade dialog to 1.1-20120215.
- Upgrade msmtp to 1.4.28.
- Upgrade lighttpd to 1.4.31.
- Upgrade bsnmp-ucd to 0.3.6.
- Upgrade to FreeBSD 9.0-RELEASE-p3.
- Upgrade smartmontools to 5.43.
- Upgrade samba to 3.6.6.
- Upgrade translations.
- Upgrade php to 5.4.5.
- Upgrade transmission to 2.61.
- Upgrade bash 4.2 to patch 037.
- Upgrade e2fsprogs to 1.42.5.
- Upgrade proftpd to 1.3.4b.
- Upgrade nut to 2.6.5.
- Upgrade zoneinfo to 2012e.
- Upgrade netatalk to 2.2.3.
- Upgrade istgt to 20120811.

Bug fixes:

- Fix LCDproc not working.
- Fix quixplorer remote code execution vulnerability.
- Fix serveral webgui bugs.
- Fix boot warnings.
- Fix creating a zfs raid with 1 device larger than the rest of the members.
- Fix upgrade embedded installation from livced. (BR-3533624)
- Fix webserver no longer runs as root. (BR-3517751)
  Add option to run as www (default) or root user.
- Fix upssched regression nut.
- Fix webgui zfs status.
- Fix transmission webgui errors.

Permanent restrictions:
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.
- Enable 'polling' on interfaces used by a LAGG interface will make it inoperable.

Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.

NEED TESTING:
- IPv6: auto mode
- All services using IPv6 address (NFS, FTP, etc...)
- Netatalk VFS Samba module (automatically enabled when Netatalk starts) crashes
  samba when accessing to share
- Need to write an online-test procedure

Help needed:
- Need help for adding LDAP authentication feature:
  Main services can be easily authenticated using PAM-LDAP, but is harder for Samba.
