@@ -46,6 +46,7 @@ Bug fixes:
 - Fix upssched regression nut.
 - Fix webgui zfs status.
 - Fix transmission webgui errors.
+- Fix charset decoding file manager.
 
 Permanent restrictions:
 - It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
